<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".activies.authorization.ForgotPasswordActivity">

    <include layout="@layout/include_toolbar" />

    <ScrollView
        style="@style/StyleBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin_content">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="@dimen/logo_icon_size"
                android:layout_height="@dimen/logo_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_splash_screen" />

            <TextView
                style="@style/StyleInputLabel"
                android:layout_marginTop="@dimen/activity_vertical_margin_content"
                android:text="@string/str_forgot_password_have_problem" />

            <TextView
                style="@style/StyleInputLabel"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_forgot_password_type_your_mail" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/StyleInputText"
                android:layout_marginTop="@dimen/activity_vertical_margin_content"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin_content"
                android:background="@drawable/selector_login_button"
                android:ems="12"
                android:text="@string/btn_send"
                android:textColor="@color/colorWhite" />


            <TextView
                style="@style/StyleInputLabel"
                android:layout_marginTop="@dimen/activity_vertical_margin_content"
                android:text="@string/str_forgot_your_email" />


            <TextView
                style="@style/StyleInputLabel"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_forgot_your_email_contact_support" />

            <Button
                android:id="@+id/btnContactSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin_content"
                android:background="@drawable/selector_login_button"
                android:ems="12"
                android:text="@string/btn_contact_support"
                android:textColor="@color/colorWhite" />


        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>