<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/activity_vertical_margin_content"
        android:hint="@string/str_current_password"
        android:inputType="textPassword"
        android:padding="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:hint="@string/str_new_password"
        android:inputType="textPassword"
        android:padding="@dimen/activity_vertical_margin" />


    <EditText
        android:id="@+id/edtNewPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:hint="@string/str_new_password_confirm"
        android:inputType="textPassword"
        android:padding="@dimen/activity_vertical_margin" />


</LinearLayout>
